fix Wrong alignment for 'Центр' cards after search

--- a/src/components/centerList/css/CenterList.less
+++ b/src/components/centerList/css/CenterList.less
@@ -121,6 +121,17 @@
 .club-list .expand-icon{
   margin-top: 5px;
 }
+.oneAddress{
+  display: inline-block;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow:hidden;
+  max-width:165px;
+  height: 24px;
+  color: #2D4C68;
+  font-weight: 600;
+  opacity: 0.6;
+}
 
 .club-list .card .address .oneAddress{
   display: inline-block;
